# awin

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: manifest.cmake  utils.cmake
cmake/templates/: app.config.in  app.manifest.in  app.rc.in  lib.manifest.in  test.cpp.in  version.h.in
include/awin/: cursor.hpp  native_access.hpp  platform.hpp  popup.hpp  types.hpp  vulkan.hpp  window.hpp
include/awin/integration/: agrb.hpp
include/awin/linux/: cursor.hpp  platform.hpp
include/awin/linux/x11/: loaders.hpp  platform.hpp  window.hpp
include/awin/win32/: cursor.hpp  platform.hpp
include/window/: platform.hpp  platform@win32.hpp  platform_win32.hpp  popup.hpp  types.hpp  vulkan.hpp  vulkan_win32.hpp  window.hpp  window_win32.hpp
include/window/win32/: cursor.hpp  platform.hpp
src/: __os_linux_popup.cpp  __os_linux_window.cpp  __os_win32_popup.cpp  __os_win32_window.cpp  env.hpp  linux_cursor_pd.hpp  linux_pd.hpp  popup.cpp  vulkan.cpp  win32_pd.hpp  window.cpp
src/integration/: agrb.cpp
src/wayland/: __os_linux_init.cpp  __os_linux_loaders.cpp  __os_linux_window.cpp  loaders.hpp  platform.hpp  window.hpp
src/wayland/generators/: CMakeLists.txt  redifinition.h  wayland.c
src/window/: __os_win32_vulkan.cpp  __os_win32_window.cpp  popup.cpp  types.cpp  vulkan.cpp  vulkan@win32.cpp  vulkan_win32.cpp  window.cpp  window@win32.cpp  window_win32.cpp
src/x11/: __os_linux_init.cpp  __os_linux_keys.cpp  __os_linux_loaders.cpp  __os_linux_window.cpp  keys.hpp  loaders.hpp  platform.hpp  window.hpp
tests/: CMakeLists.txt  popup.cpp  window.cpp
